fix: Dropdown overflow on cards

--- a/stylesheets/components/_card.less
+++ b/stylesheets/components/_card.less
@@ -3,7 +3,6 @@
   box-shadow: none;
   border: 1px solid #e6e6e6;
   border-radius: 8px;
-  overflow: hidden;
 
   .card-content {
     padding: 5px 20px 20px 20px !important;
